language/move-lang/tests/move_check/expansion/duplicate_alias.exp
error: 

   ┌── tests/move_check/expansion/duplicate_alias.move:7:19 ───
   │
 8 │     use 0x1::Y as Z;
   │                   ^ Duplicate definition for alias 'Z'
   ·
 7 │     use 0x1::X as Z;
   │                   - Previously defined here
   │

error: 

   ┌── tests/move_check/expansion/duplicate_alias.move:8:19 ───
   │
 8 │     use 0x1::Y as Z;
   │                   ^ Unused 'use' of alias 'Z'. Consider removing it
   │

